# Neutrino-Pulse-Generator

./: .gitignore  CMakeLists.txt  LutROM.vhd  README.md  exponential_signal.csv  sg  tabla exponencial.xlsx  test.ipynb
include/: channel.h  generate_exp_decay_array.h  lut.h  mmc.h  pixel.h  squid.h  utils.h  xorrshiro128.h
src/: channel.cc  generate_exp_decay_array.cc  lut.cc  main.c  main.cc  mmc.cc  pixel.cc  squid.cc  utils.cc  xorrshiro128.c
